--- a/server/static/html/index.html
+++ b/server/static/html/index.html
@@ -8,28 +8,32 @@
     <div class="navbar_wrapper">
         <nav class="navbar">
           <div id="navbar_mr3d">
-            <div id="navbar_alien_logo">
-              <img src="/static/resources/icons/mr3dalien_white.png.webp">
-          </div>
+              <a href="/" id="navbar_alien_logo">
+                <img src="/static/resources/icons/mr3dalien_white.png.webp">
+              </a>
           <div id="navbar_mr3d_2">
             <div id="navbar_alien_text">
               Mr3DAlien
             </div>
             <div id="navbar_alien_social_icons">
-                <a class="navbar_social_icon">
-                  <img src="/static/resources/icons/twitter.webp">
+                <a href="https://www.youtube.com/channel/UC_dBXHYNOUckH2gwfLZGtHw" class="navbar_social_icon" id="navbar_social_youtube" target="_blank">
+                  <img src="/static/resources/icons/youtube_button.webp">
                 </a>
 
-                <a class="navbar_social_icon">
-                  <img src="/static/resources/icons/twitter.webp">
+                <a href="https://twitter.com/Mr3DAlien" class="navbar_social_icon" id="navbar_social_twitter" target="_blank">
+                  <img src="/static/resources/icons/twitter_button.webp">
                 </a>
 
-                <a class="navbar_social_icon">
-                  <img src="/static/resources/icons/twitter.webp">
+                <a href="https://www.patreon.com/Mr3DAlien" class="navbar_social_icon" id="navbar_social_patreon" target="_blank">
+                  <img src="/static/resources/icons/patreon_button.webp">
                 </a>
 
-                <a class="navbar_social_icon">
-                  <img src="/static/resources/icons/twitter.webp">
+                <a href="https://www.planetminecraft.com/member/mr3dalien/" class="navbar_social_icon" id="navbar_social_planetminecraft" target="_blank">
+                  <img src="/static/resources/icons/planetminecraft_button.webp">
+                </a>
+
+                <a href="/coming_soon" class="navbar_social_icon" id="navbar_social_discord" target="_blank">
+                  <img src="/static/resources/icons/discord_button.webp">
                 </a>
             </div>
           </div>
@@ -41,12 +45,12 @@
             </div>
             <div class="navbar_icons">
               <div class="navbar_item">
-                <a>
+                <a href="/">
                   <p>Home</p>
                 </a>
               </div>
               <div class="navbar_item">
-                <a>
+                <a href="https://www.youtube.com/channel/UC_dBXHYNOUckH2gwfLZGtHw/videos">
                   <p>Videos</p>
                 </a>
               </div>
@@ -60,7 +64,9 @@
                   <div class="navbar_item_minecraft_dropdown">
                     <div id="navbar_mc_dropdown_menu">
                       <div class="navbar_mc_dropdown_item">
-                        <p>Alien-Packs</p>
+                        <a href="/alien_packs">
+                          <p>Alien-Packs</p>
+                        </a>
                       </div>
                       <div class="navbar_mc_dropdown_item">
                         <p>Random-Packs</p>
@@ -70,6 +76,31 @@
                       </div>
                       <div class="navbar_mc_dropdown_item" id="navbar_mc_dropdown_item_last">
                         <p>Maps</p>
+                      </div>
+                    </div>
+                  </div>
+                  
+                </div>
+                <div class="navbar_item" id="navbar_item_partners">
+                  <div id="navbar_item_partners_text">
+                    <a>
+                      <p>Partners</p>
+                      <p id="navbar_dropdown_arrow">▼</p>
+                    </a>
+                  </div>
+                  <div class="navbar_item_partners_dropdown">
+                    <div id="navbar_partners_dropdown_menu">
+                      <div class="navbar_partners_dropdown_item">
+                        <img src="/static/resources/icons/Mr3DAlien_Color_Sparkly_Eyes.webp">
+                      </div>
+                      <div class="navbar_partners_dropdown_item">
+                        <img src="/static/resources/icons/Mr3DAlien_Color_Sparkly_Eyes.webp">
+                      </div>
+                      <div class="navbar_partners_dropdown_item">
+                        <img src="/static/resources/icons/Mr3DAlien_Color_Sparkly_Eyes.webp">
+                      </div>
+                      <div class="navbar_partners_dropdown_item" id="navbar_partners_dropdown_item_last">
+                        <img src="/static/resources/icons/Mr3DAlien_Color_Sparkly_Eyes.webp">
                       </div>
                     </div>
                   </div>
@@ -179,8 +210,59 @@
               </div>
             </div>
           </div>
+          <div id="content_twitch">
+            <div id="twitch_text">Twitch</div>
+            <div id="twitch-embed"></div>
+          </div>
+          
+          <script src="https://embed.twitch.tv/embed/v1.js"></script>
+          <script type="text/javascript">
+            new Twitch.Embed("twitch-embed", {
+              width: "100%",
+              height: "100%",
+              channel: "mr3dalien",
+            });
+          </script>
+          <div id="content_yt">
+            <div class="content_yt_title">Youtube</div>
+            <div class="content_yt_entries">
+              <div class="content_yt_entry">
+                <div class="content_yt_entry_text">Commands</div>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=UU_dBXHYNOUckH2gwfLZGtHw" title="Commands Player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              </div>
+              <div class="content_yt_entry">
+                <div class="content_yt_entry_text">Let's Plays</div>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=UURcXAnXe9LbmMsEfUwu-fdQ" title="Lets Plays Player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              </div>
+            </div>
+          </div>
         </div>
         <div class="content_right"></div>
+      </div>
+      <div class="footer">
+        <div class="footer_content">
+          <div class="footer_about_left">
+            <h4>About</h4>
+            <p>© 2022 by Mr3DAlien</p>
+            <p>Mr3DAlien.net is the official website dedicated to Mr3DAliens Creations.</p>
+          </div>
+          <div class="footer_logo">
+            <img class="footer_cube_chaos_logo" src="/static/resources/icons/mr3dalien_white.png.webp">
+            <div class="footer_mr3dalien_text">Mr3DAlien</div>
+          </div>
+          <div class="footer_about_right">
+            <div class="footer_legal">
+              <h4>Legal</h4>
+                <li><a href="/static/html/terms_and_conditions.html">Terms and Conditions</a></li><li><a href="/static/html/privacy_policy.html">Privacy Policy</a></li><table>
+                </table>
+            </div>
+            <div class="footer_links">
+              <h4>Links</h4>
+                <li><a href="https://twitter.com/mr3dalien">Twitter</a></li><li><a href="https://www.youtube.com/channel/UC_dBXHYNOUckH2gwfLZGtHw">Youtube</a></li><li><a href="https://github.com/Mr3DAlien">GitHub</a></li><li><a href="https://cubechaos.net">CubeChaos</a></li><table>
+                </table>
+            </div>
+          </div>
+        </div>
       </div>
       <script src="/static/js/anime.min.js"></script>
       <script src="/static/js/jquery-3.6.0.min.js"></script>
